# ORBit2

./: .cvsignore  AUTHORS  ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.in  Makefile.shared  NEWS  NEWS-0.x  ORBit-2.0-cpp.pc.in  ORBit-2.0.pc.in  ORBit-CosNaming-2.0.pc.in  ORBit-imodule-2.0.pc.in  ORBit.m4  ORBit.spec.in  ORBit2.doap  ORBit2.m4  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  index.html  orbit-config.in  orbit2-config.in  orbit2-zip.in  params.json  project.config
include/orbit/goa/: Makefile.am  goa-basics.h  orbit-goa.h  orbit-gservant.h
include/orbit/orb-core/: .cvsignore  Makefile.am  Makefile.in  allocators.h  corba-any-type.h  corba-any.h  corba-context-type.h  corba-context.h  corba-environment-type.h  corba-environment.h  corba-ir.h  corba-nvlist-type.h  corba-nvlist.h  corba-object-type.h  corba-object.h  corba-orb-type.h  corba-orb.h  corba-pobj.h  corba-policy-type.h  corba-string.h  corba-typecode-type.h  corba-typecode.h  orb-core-types.h  orb-core.h  orb-defs.h  orb-types.h  orb.h  orbit-adaptor.h  orbit-object.h  orbit-small.h  poa-types.h
linc2/: .cvsignore  ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  autogen.sh  configure.in  linc-config.in  linc.m4  linc.pc.in  linc.spec.in
linc2/docs/: .cvsignore  Makefile.am  linc-docs.sgml  linc-sections.txt
linc2/docs/tmpl/: config.sgml  linc-config.sgml  linc-connection.sgml  linc-private.sgml  linc-protocol.sgml  linc-server.sgml  linc-types.sgml  linc-unused.sgml  linc.sgml
linc2/include/: Makefile.in
linc2/include/linc/: .cvsignore  Makefile.am  Makefile.in  linc-config.h  linc-config.h.in  linc-connection.h  linc-protocol.h  linc-server.h  linc-source.h  linc-threads.h  linc-types.h  linc.h
linc2/src/: .cvsignore  Makefile.am  Makefile.in  cleanup.c  linc-compat.c  linc-compat.h  linc-connection.c  linc-debug.h  linc-private.h  linc-protocols.c  linc-server.c  linc-source.c  linc.c
linc2/test/: .cvsignore  Makefile.am  Makefile.in  test-linc.c
src/idl-compiler/: .cvsignore  Makefile.am  Makefile.in  notes.txt  orbit-idl-backend.c  orbit-idl-backends.c  orbit-idl-c-backend.c  orbit-idl-c-backend.h  orbit-idl-c-common.c  orbit-idl-c-demarshal.c  orbit-idl-c-deps.c  orbit-idl-c-headers.c  orbit-idl-c-imodule.c  orbit-idl-c-marshal.c  orbit-idl-c-skelimpl.c  orbit-idl-c-skels.c  orbit-idl-c-stubs.c  orbit-idl-c-typecode.c  orbit-idl-c-utils.c  orbit-idl-driver.c  orbit-idl-genmarshal.c  orbit-idl-main.c  orbit-idl-marshal.c  orbit-idl-marshal.h  orbit-idl-passes.c  orbit-idl-utils.c  orbit-idl2.h  orbit-idl3-types.h
src/idl-compiler/cpp/: Makefile.am  README  base.cc  base.hh  error.hh  language.cc  language.hh  main.cc  pass.cc  pass.hh  pass_gather.cc  pass_gather.hh  pass_idl_it.cc  pass_idl_it.hh  pass_skels.cc  pass_skels.hh  pass_stubs.cc  pass_stubs.hh  pass_xlate.cc  pass_xlate.hh  types.cc  types.hh
src/idl_compiler_false_start/: Makefile.am  orbit-idl-c-backend.c  orbit-idl-c-backend.h  orbit-idl-c-common.c  orbit-idl-c-headers.c  orbit-idl-c-skelimpl.c  orbit-idl-c-skels.c  orbit-idl-c-stubs.c  orbit-idl-c-typecode.c  orbit-idl-c-utils.c  orbit-idl-driver.c  orbit-idl-genmarshal.c  orbit-idl-main.c  orbit-idl-marshal.c  orbit-idl-marshal.h  orbit-idl-utils.c  orbit-idl3.h
src/orb/: Makefile.am  Makefile.in  orbit-init.c  orbit-init.h
src/orb-cpp/: Makefile.am  orbitcpp.hh  orbitcpp_any.cc  orbitcpp_any.hh  orbitcpp_compound_seq.hh  orbitcpp_config.hh  orbitcpp_constants.cc  orbitcpp_constants.hh  orbitcpp_exception.cc  orbitcpp_exception.hh  orbitcpp_exceptionlist.hh  orbitcpp_object.cc  orbitcpp_object.hh  orbitcpp_orb.cc  orbitcpp_orb.hh  orbitcpp_poa.cc  orbitcpp_poa.hh  orbitcpp_sequence.hh  orbitcpp_simple_seq.hh  orbitcpp_smartptr.hh  orbitcpp_string_seq.hh  orbitcpp_tools.cc  orbitcpp_tools.hh  orbitcpp_typecode.cc  orbitcpp_typecode.hh  orbitcpp_types.cc  orbitcpp_types.hh  orbitcpp_var_smartptr.hh
src/orb/GIOP/: Makefile.am  Makefile.in  giop-connection.c  giop-debug.h  giop-endian.c  giop-private.h  giop-recv-buffer.c  giop-send-buffer.c  giop-server.c  giop.c
src/orb/dynamic/: .cvsignore  Makefile.am  Makefile.in  dii.c  dynany.c
src/orb/goa/: .cvsignore  Makefile.am  TODO  gobject-adaptor.idl  orbit-goa.c  orbit-gservant.c
src/orb/include/: .cvsignore  Makefile.am  Makefile.in
src/orb/orb-core/: .cvsignore  Makefile.am  Makefile.in  allocators.c  corba-any.c  corba-context.c  corba-defs.idl  corba-env.c  corba-loc.c  corba-nvlist.c  corba-object.c  corba-ops.idl  corba-orb.c  corba-policy.c  corba-request.c  corba-string.c  corba-typecode.c  corba-types.c  iop-defs.idl  iop-profiles.c  iop-profiles.h  orb-core-export.h  orb-core-private.h  orb.c  orbhttp.c  orbhttp.h  orbit-adaptor.c  poa.c  (+8 more)
test/: .cvsignore  Makefile.am  Makefile.in  echo-client-t.c  echo-client.c  echo-local.c  echo-server.c  echo-srv.c  ior-decode.c  test-any-client.c  test-any-server.c  test-corbaloc.c  test-dynany.c  test-exception-client.c  test-exception-server.c  test-exception.idl  test-giop-frag.h  test-giop.c  test-mem.c  test-performance.c  timeout-client.c  timeout-server.c  timeout.sh  timeout_impl.c  typelib-dump.c
test/cpp/: Makefile.am  Makefile.am_fragment  Makefile_generated.am_fragment
test/everything/: .cvsignore  Makefile.am  Makefile.in  anyServer.c  arrayServer.c  basicServer.c  client.c  constants.h  contextServer.c  deadReference.c  everything.idl  lifeCycle.c  pingServer.c  sequenceServer.c  server.c  structServer.c  test-basic-server.c  test-basic-server.h  test-struct-server.c  test-struct-server.h  test.c  test.sh  unionServer.c
test/inhibit/: .cvsignore  Makefile.am  Makefile.in  baa.idl  test-inhibit.c
test/poa/: .cvsignore  Makefile.am  Makefile.in  README  poatest-basic-shell.c  poatest-basic01.c  poatest-basic02.c  poatest-basic03.c  poatest-basic04.c  poatest-basic05.c  poatest-basic06.c  poatest-basic07.c  poatest-basic08.c  poatest-basic09.c  poatest-basic10.c  poatest-basic11.c  poatest-exception.h  poatest.idl  test-poa.c
(+240 files in other folders)
